# amogus_bot

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  filters.json  flake.nix  shell.nix
.github/workflows/: rust.yml
roux/src/subreddit/: mod.rs
roux/src/subreddit/responses/: subreddits.rs
src/: currency.rs  error.rs  escape.rs  ffmpeg.rs  gpt.rs  jewtube.rs  lib.rs  main.rs  nhentai.rs  reddit.rs  shorten.rs  shorts.rs  statics.rs  tts.rs  urban.rs  xkcd.rs  yt_audio.rs  yt_download.rs
