[package]
name = "amogus_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["full"] }
dotenv = "0.15"
m3u8-rs = "1.0.6"
regex = "1"
once_cell = "1.8"
reqwest = { version = "0.11.4", features = ["cookies"] }
serde_json = "1"
rand = "0.8"
rustube = { git = "https://github.com/DzenanJupic/rustube" }
roux = { path = "./roux" }
hentai = { git = "https://github.com/meguminloli/hentai" }