[package]
name = "amogus_bot"
version = "0.1.1"
edition = "2021"
resolver = "2"

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["full"] }
dotenv = "0.15"
m3u8-rs = "1.0.6"
regex = "1"
once_cell = "1.8"
html-escape = "0.2.9"
reqwest = { version = "0.11.4", features = ["cookies"] }
serde_json = "1"
serde = { version = "1", features = ["derive"]}
rand = "0.8"
rustube = { git = "https://github.com/DzenanJupic/rustube" }
roux = { path = "./roux" }
hentai = { git = "https://github.com/meguminloli/hentai" }
memchr = "2.4.1"